# EstuMercado-Gestion-Escolar-CPP

./: .gitignore  CMakeLists.txt  EXPLICACION_TECNICA.md  Main.cpp  README.md
